--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page title</title>
     <script type="module" src="./index.js"></script>
+    <!-- <script type="module" src="./index1.js"></script> -->
   </head>
   <body>
     <form class="search-form" id="search-form">
